paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_001/target.compile.log
error[E0599]: no method named `try_into` found for slice `[u8]` in the current scope
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_001/target.rs:41:58
    |
 41 |         let v_bytes: [u8; 4] = storage[start..start + 4].try_into().unwrap();
    |                                                          ^^^^^^^^
    |
   ::: /Users/arielkellison/.rustup/toolchains/nightly-2025-09-10-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/convert/mod.rs:622:8
    |
622 |     fn try_into(self) -> Result<T, Self::Error>;
    |        -------- the method is available for `[u8]` here
    |
    = help: items from traits can only be used if the trait is in scope
    = note: 'std::convert::TryInto' is included in the prelude starting in Edition 2021
help: trait `TryInto` which provides `try_into` is implemented but not in scope; perhaps you want to import it
    |
  1 + use std::convert::TryInto;
    |
help: there is a method `into` with a similar name
    |
 41 -         let v_bytes: [u8; 4] = storage[start..start + 4].try_into().unwrap();
 41 +         let v_bytes: [u8; 4] = storage[start..start + 4].into().unwrap();
    |

warning: unused variable: `off`
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_001/target.rs:72:9
   |
72 |     let off: usize = 12;
   |         ^^^
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
help: if this is intentional, prefix it with an underscore
   |
72 |     let _off: usize = 12;
   |         +
help: you might have meant to pattern match on the similarly named constant `N`
   |
72 -     let off: usize = 12;
72 +     let test_nonempty_object::N: usize = 12;
   |

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0599`.